--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 .container {
     width: 600px;
     padding: 20px 0;
@@ -25,7 +24,7 @@
     width: 50%;
     display: flex;
     flex-flow: column;
-    justify-content:flex-end;
+    justify-content: flex-end;
 }
 
 .button {
@@ -34,4 +33,10 @@
     border: none;
     margin: 10px;
     padding: 5px 10px;
+}
+
+div:has(>#result-list-html) {
+    width: 80%;
+    margin: 0 auto;
+    word-wrap: break-word;
 }
